argo-cd/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argo-cd-forward-auth-mw
  namespace: argo-cd
spec:
  forwardAuth:
    address: http://forward-auth.oauth.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-cd
  namespace: argo-cd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.${DDNS}`)
      kind: Rule
      middlewares:
        - name: argo-cd-forward-auth-mw
      services:
        - name: argo-cd-argocd-server
          port: 80
  tls:
    certResolver: ${RESOLVER}
